--- a/index-style.css
+++ b/index-style.css
@@ -15,8 +15,9 @@ header{
     border: 1px dashed red;
 }
 
-.menu-icon{
-    background-color: gray;
-    width: 30px;
-    height: 30px;
+.my-card{
+    background-color: aquamarine;
+    width: 70%;
+    height: 300px;
 }
+
