--- a/index-style.css
+++ b/index-style.css
@@ -7,7 +7,6 @@ h1{
     height: 30px;
 }
 
-
 /* Utils  */
 .my-col{
     background-color: bisque;
@@ -34,4 +33,8 @@ h1{
 .my-parag{
     background-color: bisque;
     height: 70px; 
+}
+
+.copy-right{
+    height: 100px;
 }
