--- a/index-style.css
+++ b/index-style.css
@@ -1,11 +1,8 @@
 /* Generics  */
 header{
-    height: 100px;
+    background-color: #2D3E50;
 }
 
-h1{
-    height: 30px;
-}
 
 /* Utils  */
 .my-col{
