--- a/index-style.css
+++ b/index-style.css
@@ -1,10 +1,14 @@
 /* Generics  */
+img{
+    max-width: 100%;
+}
+
 header{
     background-color: #2D3E50;
 }
 
-img{
-    max-width: 100%;
+footer{
+    background-color: #3A546D;
 }
 
 /* Utils  */
@@ -17,41 +21,15 @@ img{
     height: 0;
 }
 
-/*! Deleted  */
-.my-col{
-    background-color: bisque;
-    border: 1px solid blue;
-    height: 50px;
+.my-text-primary{
+    color: #1CBC9C;
 }
 
 .my-border{
-    border: 1px dashed red;
+    border: 1px solid white;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
 }
-
-.my-card{
-    background-color: aquamarine;
-    height: 300px;
-    width: 70%;
-}
-
-.my-img{
-    background-color: aquamarine;
-    height: 300px;
-    width: 100%;
-}
-
-.my-parag{
-    background-color: bisque;
-    height: 70px; 
-}
-
-.copy-right{
-    height: 100px;
-}
-/*! deleted  */
-
-
-/* Profile section  */
-
 
 
